--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
-  text-align: center;
+  max-width: 1280px;
+  margin: 0 auto;
+  /* background-color: rgb(235, 246, 235); */
 }
 
 .App-logo {
